# velar

./: .gitignore  Anchor.toml  Cargo.toml  README.md
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  procgen.rs
gui/: Cargo.toml
gui/src/: app.rs  constants.rs  main.rs  theme.rs
gui/src/commands/: transaction.rs
gui/src/update/: mod.rs
gui/src/widgets/: easing.rs  mod.rs  spinner.rs
misc/: FICTIONAL.md  README.md
programs/realm/: Cargo.toml
programs/realm/src/: common.rs  lib.rs
programs/realm/src/state/: character.rs  config.rs  mod.rs  realm.rs  resource.rs  skill.rs
